--- a/src/app/components/contractDetails/contractDetails.component.html
+++ b/src/app/components/contractDetails/contractDetails.component.html
@@ -24,7 +24,7 @@
                         <div class="pull-right">
                             <button type="button" class="btn btn-success add-user" type="button" data-toggle="modal"
                             data-target=".Payment-add">
-                            <i class="glyphicon glyphicon-plus"></i> Add Anchorage </button>
+                            <i class="glyphicon glyphicon-plus"></i> Add payment </button>
                         </div>
                   </div>
               </div>
