--- a/src/app/components/addcontract/addcontract.component.html
+++ b/src/app/components/addcontract/addcontract.component.html
@@ -5,11 +5,11 @@
         <!-- Content Header (Page header) -->
         <section class="content-header">
           <h1>
-              Add Contract
+              إضافة عقد
           </h1>
           <ol class="breadcrumb">
-            <li><a href="#"> Home</a></li> 
-            <li><a href="#">Add user
+            <li><a href="#"> الصفحة الرئيسية</a></li> 
+            <li><a href="#">إضافة عقد
             </a></li>
           </ol>
         </section>
@@ -22,34 +22,96 @@
                       <div class="profile-form">
                         <form class="form-horizontal">
                           <div class="form-group">
-                            <label  class="col-sm-2 control-label">Client Name</label>
-                            <div class="col-sm-9">
-                              <input type="email" class="form-control"  placeholder="Name">
-                            </div>
-                          </div>
-                          <div class="form-group">
-                            <label  class="col-sm-2 control-label">Start date</label>
+                            <label  class="col-sm-2 control-label">تاريخ التعاقد</label>
                             <div class="col-sm-9">
                               <input type="date" class="form-control">
                             </div>
                           </div>
                           <div class="form-group">
-                              <label  class="col-sm-2 control-label">End date</label>
-                              <div class="col-sm-9">
-                                <input type="date" class="form-control">
-                              </div>
-                          </div>
-                          <div class="form-group">
-                              <label  class="col-sm-2 control-label">Details</label>
-                              <div class="col-sm-9">
-                                <textarea class="form-control" cols="30" rows="10">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, est praesentium mollitia quidem sed expedita deleniti repudiandae magnam labore temporibus.</textarea>
-                              </div>
-                          </div>
-                          <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-10">
-                              <button type="submit" class="save-btn btn btn-primary">Save</button>
+                            <label class="col-sm-2 control-label"> اسم المرسى / اسم المؤسسه </label>
+                            <div class="col-sm-9">
+                              <input type="text" class="form-control">
                             </div>
                           </div>
+                          <div class="form-group">
+                              <label  class="col-sm-2 control-label"> اسم العميل</label>
+                              <div class="col-sm-9">
+                                <select class="form-control">
+                                  <option>احمد محمد </option>
+                                  <option> امنية عاطف</option>
+                                </select>
+                              </div>
+                          </div>
+                          <div class="form-group">
+                              <label  class="col-sm-2 control-label">المبلغ قبل الضريبه</label>
+                              <div class="col-sm-9">
+                                <input type="number" class="form-control">
+                            </div>
+                          </div>
+                          <div class="form-group">
+                              <label  class="col-sm-2 control-label">الضريبه</label>
+                              <div class="col-sm-9">
+                                <input type="number" class="form-control">
+                              </div>
+                          </div>
+                          <div class="form-group">
+                              <label  class="col-sm-2 control-label">المبلغ بعد الضريبه</label>
+                              <div class="col-sm-9">
+                                <input type="number" class="form-control">
+                              </div>
+                          </div>
+                          <div class="form-group">
+                            <label  class="col-sm-2 control-label"> نوع الدفعه </label>
+                            <div class="col-sm-9">
+                              <select class="form-control">
+                                <option> دفعة واحدة </option>
+                                <option> دفعتين </option>
+                                <option> اربع دفعات </option>
+                                <option> شهري </option>
+                              </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                              <label  class="col-sm-2 control-label"> الفترة من </label>
+                              <div class="col-sm-9">
+                                <input type="date" class="form-control"/>
+                              </div>
+                              </div>
+                              <div class="form-group">
+                              <label  class="col-sm-2 control-label"> إلى </label>
+                              <div class="col-sm-9">
+                                <input type="date" class="form-control"/>
+                              </div>                           
+                        </div>
+                        <div class="form-group">
+                            <label  class="col-sm-2 control-label">  اسم الواسطه </label>
+                            <div class="col-sm-9">
+                              <input type="text" class="form-control"/>
+                            </div>
+                            </div>
+                            <div class="form-group">
+                            <label  class="col-sm-2 control-label"> حروف الواسطة </label>
+                          <div class="col-sm-9">
+                            <input type="text" class="form-control"/>
+                          </div>
+                          </div>
+                          <div class="form-group">
+                            <label  class="col-sm-2 control-label"> طول الواسطة </label>
+                            <div class="col-sm-9">
+                            <input type="text" class="form-control"/>
+                            </div>
+                            </div>
+                            <div class="form-group">
+                            <label  class="col-sm-2 control-label"> عرض الواسطة </label>
+                            <div class="col-sm-9">
+                            <input type="text" class="form-control"/>
+                            </div>
+                            </div>
+                        <div class="form-group">
+                          <div class="col-sm-offset-2 col-sm-10">
+                            <button type="submit" class="save-btn btn btn-primary">حفظ</button>
+                          </div>
+                        </div>
                         </form>
                       </div>
                       <!-- /.tab-pane -->
