--- a/src/app/components/asside/asside.component.html
+++ b/src/app/components/asside/asside.component.html
@@ -13,22 +13,21 @@
       </div>
       <!-- sidebar menu -->
       <ul class="sidebar-menu" data-widget="tree">
-        <li class="header">MAIN NAVIGATION</li>
         <li>
           <a routerLink="/homepage">
-            <i class="fa fa-user" aria-hidden="true"></i><span>All Users</span>
+            <i class="fa fa-user" aria-hidden="true"></i><span>جميع العملاء</span>
           </a>
         </li>
         <li>
           <a routerLink="/adduser">
             <i class="fa fa-plus" aria-hidden="true"></i>
-            <span>Add User</span>
+            <span>إضافة عميل</span>
           </a>
         </li>
         <li>
           <a routerLink="/addcontract">
             <i class="fa fa-hospital-o" aria-hidden="true"></i>
-            <span>Add contract</span>
+            <span>إضافة عقد</span>
           </a>
         </li>
       </ul>
