--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -5,10 +5,10 @@
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <h1>
-                All users
+                جميع العملاء
             </h1>
             <ol class="breadcrumb">
-                <li><a href="#"> Home</a></li>
+                <li><a href="#"> جميع العملاء</a></li>
             </ol>
         </section>
         <!-- Main content -->
@@ -17,7 +17,7 @@
                 <div class="col-xs-12">
                     <div class="box">
                         <div class="box-header">
-                            <h3 class="box-title">Users</h3>
+                            <h3 class="box-title">العملاء</h3>
                         </div>
                         <!-- /.box-header -->
                         <div class="box-body">
@@ -25,13 +25,13 @@
                                 <div class="row">
                                     <div class="col-sm-6">
                                         <div class="dataTables_length" id="example1_length">
-                                            <label>Show <select name="example1_length" aria-controls="example1"
+                                            <label>مشاهدة <select name="example1_length" aria-controls="example1"
                                                     class="form-control input-sm">
                                                     <option value="10">10</option>
                                                     <option value="25">25</option>
                                                     <option value="50">50</option>
                                                     <option value="100">100</option>
-                                                </select> entries </label>
+                                                </select> عميل </label>
                                         </div>
                                     </div>
                                     <div class="col-sm-6">
@@ -44,24 +44,25 @@
                                 <table id="example2" class="table table-bordered table-hover org organization-table">
                                     <thead>
                                         <tr>
-                                            <th> Photo</th>
-                                            <th>Name</th>
-                                            <th> Registeration Date </th>
-                                            <th> Gender </th>
-                                            <th> Status </th>
-                                            <th> Action </th>
+                                            <th> إسم العميل</th>
+                                            <th>رقم الجوال</th>
+                                            <th>رقم الواتس</th>
+                                            <th>  البريد اﻹلكتروني </th>
+                                            <th> رقم الهوية </th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
 
-                                            <td routerLink="/usercontract"><img src="assets/images/org1.png" alt="organization-img" /></td>
                                             <td  routerLink="/usercontract" class="name-org">Mohamed
                                                 Ahmed
                                             </td>
-                                            <td routerLink="/usercontract">1-1-2020</td>
-                                            <td routerLink="/usercontract"><i class="fa fa-male"></i></td>
-                                            <td routerLink="/usercontract"><button class="btn btn-success">Active</button></td>
+                                            <td  routerLink="/usercontract" class="name-org">012847758
+                                               
+                                            </td>
+                                            <td routerLink="/usercontract">65748939288</td>
+                                            <td routerLink="/usercontract">jjk@yahoo.com</td>
+                                            <td routerLink="/usercontract">74566789990</td>
                                             <td class=" text-center">
                                                 <button type="button" class="edit-button btn btn-success" type="button"
                                                     data-toggle="modal" data-target=".user-edit">
@@ -75,13 +76,16 @@
 
                                         </tr>
                                         <tr>
-                                            <td routerLink="/usercontract"><img src="assets/images/org1.png" alt="organization-img" /></td>
-                                            <td  routerLink="/usercontract" class="name-org">Omnia
-                                                Atef
+
+                                            <td  routerLink="/usercontract" class="name-org">Mohamed
+                                                Ahmed
                                             </td>
-                                            <td routerLink="/usercontract">2-9-2019</td>
-                                            <td routerLink="/usercontract"><i class="fa fa-male"></i></td>
-                                            <td routerLink="/usercontract"><button class="btn btn-success">Active</button></td>
+                                            <td  routerLink="/usercontract" class="name-org">012847758
+                                               
+                                            </td>
+                                            <td routerLink="/usercontract">65748939288</td>
+                                            <td routerLink="/usercontract">jjk@yahoo.com</td>
+                                            <td routerLink="/usercontract">74566789990</td>
                                             <td class=" text-center">
                                                 <button type="button" class="edit-button btn btn-success" type="button"
                                                     data-toggle="modal" data-target=".user-edit">
@@ -92,15 +96,19 @@
                                                     <i class="glyphicon glyphicon-trash"></i>
                                                 </button>
                                             </td>
+
                                         </tr>
                                         <tr>
-                                            <td routerLink="/usercontract"><img src="assets/images/org1.png" alt="organization-img" /></td>
-                                            <td  routerLink="/usercontract" class="name-org">
-                                                Ahmed Ahmed
+
+                                            <td  routerLink="/usercontract" class="name-org">Mohamed
+                                                Ahmed
                                             </td>
-                                            <td routerLink="/usercontract">5-5-2020</td>
-                                            <td  routerLink="/usercontract"><i class="fa fa-male"></i></td>
-                                            <td><button class="btn btn-success">Active</button></td>
+                                            <td  routerLink="/usercontract" class="name-org">012847758
+                                               
+                                            </td>
+                                            <td routerLink="/usercontract">65748939288</td>
+                                            <td routerLink="/usercontract">jjk@yahoo.com</td>
+                                            <td routerLink="/usercontract">74566789990</td>
                                             <td class=" text-center">
                                                 <button type="button" class="edit-button btn btn-success" type="button"
                                                     data-toggle="modal" data-target=".user-edit">
@@ -111,25 +119,7 @@
                                                     <i class="glyphicon glyphicon-trash"></i>
                                                 </button>
                                             </td>
-                                        </tr>
-                                        <tr>
-                                            <td  routerLink="/usercontract"><img src="assets/images/org1.png" alt="organization-img" /></td>
-                                            <td  routerLink="/usercontract" class="name-org">Atef
-                                                Mohamed
-                                            </td>
-                                            <td  routerLink="/usercontract">1-2-2020</td>
-                                            <td routerLink="/usercontract"><i class="fa fa-male"></i></td>
-                                            <td><button class="btn btn-success">Active</button></td>
-                                            <td class=" text-center">
-                                                <button type="button" class="edit-button btn btn-success" type="button"
-                                                    data-toggle="modal" data-target=".user-edit">
-                                                    <i class="glyphicon glyphicon-pencil"></i>
-                                                </button>
-                                                <button type="button" class="edit-button btn btn-danger" type="button"
-                                                    data-toggle="modal" data-target=".romove-popup">
-                                                    <i class="glyphicon glyphicon-trash"></i>
-                                                </button>
-                                            </td>
+
                                         </tr>
                                     </tbody>
                                 </table>
@@ -180,15 +170,15 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <i class="fa fa-times"></i>
                 </button>
-                <h4 class="modal-title" id="gridSystemModalLabel"> <i class="fa fa-trash"></i> Remove User
+                <h4 class="modal-title" id="gridSystemModalLabel"> <i class="fa fa-trash"></i> مسح العميل
                 </h4>
             </div>
             <div class="modal-body">
-                <h4>Are you sure to remove </h4>
+                <h4>هل أنت متأكد من مسح هذا العميل؟ </h4>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Yes</button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal">No</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">نعم</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">إلغاء</button>
             </div>
             <!-- /.nav-tabs-custom -->
         </div>
@@ -203,97 +193,54 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <i class="fa fa-times"></i>
                 </button>
-                <h4 class="modal-title"> <i class="fa fa-pencil"></i> Edit User
+                <h4 class="modal-title"> <i class="fa fa-pencil"></i> تعديل بيانات العميل
                 </h4>
             </div>
             <div class="modal-body">
                 <div class="nav-tabs-custom">
                     <ul class="nav nav-tabs">
-                        <li class="active"><a href="#Data-edit" data-toggle="tab">Login Data</a></li>
-                        <li><a href="#profile-edit" data-toggle="tab">Profile</a></li>
+                        <li class="active"><a href="#Data-edit" data-toggle="tab">تعديل البيانات</a></li>
                     </ul>
                     <div class="tab-content">
                         <div class="active tab-pane" id="Data-edit">
                             <form class="form-horizontal">
                                 <div class="form-group">
-                                    <label class="col-sm-2 control-label">Name</label>
+                                    <label class="col-sm-2 control-label">إسم العميل</label>
                                     <div class="col-sm-10">
-                                        <input type="text" class="form-control" placeholder="Name">
+                                        <input type="text" class="form-control">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="col-sm-2 control-label">Email</label>
+                                    <label class="col-sm-2 control-label">رقم الجوال</label>
                                     <div class="col-sm-10">
-                                        <input type="email" class="form-control" placeholder="Email">
+                                        <input type="number" class="form-control">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="col-sm-2 control-label">User Name</label>
+                                    <label class="col-sm-2 control-label">رقم الواتس</label>
                                     <div class="col-sm-10">
-                                        <input type="text" class="form-control" placeholder="User Name">
+                                        <input type="number" class="form-control">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="col-sm-2 control-label">Password</label>
+                                    <label class="col-sm-2 control-label">البريد اﻹلكتروني</label>
                                     <div class="col-sm-10">
-                                        <input type="password" class="form-control" placeholder="Password">
+                                        <input type="email" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">رقم الهوية </label>
+                                    <div class="col-sm-10">
+                                        <input type="number" class="form-control">
                                     </div>
                                 </div>
                             </form>
-                        </div>
-                        <!-- /.tab-pane -->
-                        <div class="tab-pane" id="profile-edit">
-                            <form class="form-horizontal">
-                                <!-- gender -->
-                                <div class="form-group">
-                                    <label class="form-control-label col-sm-2">Gender</label>
-                                    <div class="col-sm-10">
-                                        <label class="radio-inline" for="inline-radio1">
-                                            <input type="radio" name="gender"> male
-                                        </label>
-                                        <label class="radio-inline" for="inline-radio2">
-                                            <input type="radio" name="gender"> female
-                                        </label>
-                                    </div>
-                                </div>
-                                <!-- Phone -->
-                                <div class="form-group">
-                                    <label for="phone" class="control-label col-sm-2">Phone</label>
-                                    <div class="col-sm-10">
-                                        <input type="text" class="form-control" placeholder="Phone" required="">
-                                    </div>
-                                </div>
-                                <!-- Mobile -->
-                                <div class="form-group">
-                                    <label for="mobile" class="control-label col-sm-2">Mobile</label>
-                                    <div class="col-sm-10">
-                                        <input type="text" class="form-control" placeholder="Mobile" required="">
-                                    </div>
-                                </div>
-                                <!-- Address -->
-                                <div class="form-group">
-                                    <label for="address1" class="control-label col-sm-2">Address</label>
-                                    <div class="col-sm-10">
-                                        <input type="text" class="form-control" placeholder="your Address" required="">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label class="col-sm-2 control-label">Upload Photo</label>
-                                    <div class="col-sm-10">
-                                        <div class="upload-btn-wrapper">
-                                            <button class="btn">Choose photo</button>
-                                            <input type="file" name="myfile" />
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
-                            <!-- /.tab-content -->
                         </div>
                     </div>
                     <div class="modal-footer">
                         <div class="form-group">
                             <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-primary" data-dismiss="modal">Submit</button>
+                                <button type="submit" class="btn btn-primary" data-dismiss="modal">حفظ</button>
                             </div>
                         </div>
                     </div>
