--- a/src/app/components/usercontract/usercontract.component.html
+++ b/src/app/components/usercontract/usercontract.component.html
@@ -5,12 +5,11 @@
           <!-- Content Header (Page header) -->
           <section class="content-header">
               <h1>
-                Wednesday
-                <small>08-05-2019</small>
+                عقود العميل
               </h1>
               <ol class="breadcrumb">
-                <li><a href="#"> Home</a></li>
-                <li><a href="#">userContract
+                <li><a href="#"> الصفحة الرئيسية</a></li>
+                <li><a href="#">عقود العميل
                   </a></li>
               </ol>
             </section>
@@ -20,7 +19,7 @@
                 <div class="col-xs-12">
                   <div class="box">
                     <div class="box-header">
-                      <h3 class="box-title">userContract</h3>
+                      <h3 class="box-title">عقود العميل</h3>
                     </div>
                     <!-- /.box-header -->
                     <div class="box-body">
@@ -28,13 +27,13 @@
                         <div class="row">
                           <div class="col-sm-6">
                             <div class="dataTables_length">
-                              <label>Show <select name="example1_length" aria-controls="example1"
+                              <label>مشاهدة <select name="example1_length" aria-controls="example1"
                                   class="form-control input-sm">
                                   <option value="10">10</option>
                                   <option value="25">25</option>
                                   <option value="50">50</option>
                                   <option value="100">100</option>
-                                </select> entries </label>
+                                </select> عقد </label>
                             </div>
                           </div>
                           <div class="col-sm-6">
@@ -48,18 +47,18 @@
                           <thead>
                             <tr>
                               <th>
-                                logo
+                                اسم المؤسسه
                               </th>
-                              <th>About contract</th>
-                              <th> Contract date </th>
-                              <th> Action </th>
+                              <th> اسم العميل</th>
+                              <th>  اسم الواسطة </th>
+                              <th> مشاهدة العقد </th>
                             </tr>
                           </thead>
                           <tbody>
                             <tr>
-                              <td><img src="../../../assets/images/org1.png" alt="organization-img" /></td>
-                              <td>Contract1</td>
-                              <td>2-3-202</td>
+                              <td>الواحة</td>
+                              <td>محمد احمد</td>
+                              <td>الواحة</td>
                               <td class=" text-center">
                                   <button routerLink="/contractdetails" type="button" class="edit-button btn btn-success" type="button" data-toggle="modal"
                                   data-target=".organize-edit">
@@ -68,22 +67,9 @@
                                 </td>
                             </tr>
                             <tr>
-                              <td><img src="../../../assets/images/org1.png" alt="organization-img" /></td>
-                              <td>Contract2
-                              </td>
-                              <td>Win 95+</td>
-                              <td class=" text-center">
-                                  <button routerLink="/contractdetails" type="button" class="edit-button btn btn-success" type="button" data-toggle="modal"
-                                  data-target=".organize-edit">
-                                  <i class="fa fa-eye"></i>
-                                  </button>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td><img src="../../../assets/images/org1.png" alt="organization-img" /></td>
-                              <td>Contract3
-                              </td>
-                              <td>Win 95+</td>
+                              <td>الواحة</td>
+                              <td>محمد احمد</td>
+                              <td>الواحة</td>
                               <td class=" text-center">
                                   <button routerLink="/contractdetails" type="button" class="edit-button btn btn-success" type="button" data-toggle="modal"
                                   data-target=".organize-edit">
@@ -92,16 +78,26 @@
                                 </td>
                             </tr>
                             <tr>
-                              <td><img src="../../../assets/images/org1.png" alt="organization-img" /></td>
-                              <td>Contract4
-                              </td>
-                              <td>Win 95+</td>
+                              <td>الواحة</td>
+                              <td>محمد احمد</td>
+                              <td>الواحة</td>
                               <td class=" text-center">
                                   <button routerLink="/contractdetails" type="button" class="edit-button btn btn-success" type="button" data-toggle="modal"
                                   data-target=".organize-edit">
                                   <i class="fa fa-eye"></i>
-                                  </button>                      
-                                 </td>
+                                  </button>                       
+                                </td>
+                            </tr>
+                            <tr>
+                              <td>الواحة</td>
+                              <td>محمد احمد</td>
+                              <td>الواحة</td>
+                              <td class=" text-center">
+                                  <button routerLink="/contractdetails" type="button" class="edit-button btn btn-success" type="button" data-toggle="modal"
+                                  data-target=".organize-edit">
+                                  <i class="fa fa-eye"></i>
+                                  </button>                       
+                                </td>
                             </tr>
                           </tbody>
                         </table>
